# mezo_backend_temp

./: . dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: checks_workflow.yml
config/: db.sqlite3
config/apps/users/models/: admin.py  base_user_manager.py  user.py
config/config/: settings.py  urls.py
config/config/integrations/: debug_toolbar.py
