[project]
name = "mezo-backend-temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16.1",
    "pre-commit>=4.5.0",
    "python-dotenv>=1.2.1",
]


target-version = "py314"

[tool.black]
target-version = ["py314"]
[tool.isort]
profile = "black"
